--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 					<ul class="nav__items">
 						<li class="nav__item"><a href="#" class="nav__link">My account</a></li>	
 						<li class="nav__item"><a href="#" class="nav__link">Wishlist</a></li>	
-						<li class="nav__item nav__item--has-dropdown"><a href="#" class="nav__link">Currency: Usd</a></li>	
+						<li class="nav__item nav__item--has-dropdown"><a href="#" class="nav__link">Currency: Usd <i class="fa fa-angle-right"></i> </a></li>	
 							<ul class="nav__dropdown">
 								<li class="nav__item"><a href="#" class="nav__link">US Dolllar</a></li>	
 								<li class="nav__item"><a href="#" class="nav__link">UZS</a></li>	
@@ -25,20 +25,185 @@
 					</ul>
 				</nav>
 				<div class="header__cart">
-					<a href="#" class="header__cart-link"><i class="fa fa-shopping-cart">My Cart (2)</i></a>
+					<a href="#" class="header__cart-link"><i class="fa fa-shopping-cart"> My Cart (2)</i></a>
 				</div>
 			</div><!-- .container -->
 		</div>
 		<div class="header__middle">
 			<div class="container">
+				<input type="search" id="search-id" class="header__middle-search" placeholder="Search Here What You Need....">
+				<label for="search-id"></label>
+			</div><!-- .container -->
+		</div>
+		<div class="header__botton">		
+		<div class="container">
+			<a href="#"><div class="header__logo"></div></a>
+			<nav class="nav nav__page">
+				<ul class="nav__items">
+					<li class="nav__item"><a class="nav__link" href="#">Home</a></li>
+					<li class="nav__item"><a class="nav__link" href="#">Women</a></li>
+					<li class="nav__item"><a class="nav__link" href="#">Men</a></li>
+					<li class="nav__item"><a class="nav__link" href="#">Footwear</a></li>
+					<li class="nav__item"><a class="nav__link" href="#">Accessories</a></li>
+					<li class="nav__item"><a class="nav__link" href="#">Sales</a></li>
+					<li class="nav__item"><a class="nav__link" href="#">Blog</a></li>
+				</ul>
+			</nav>
+		</div><!-- .container -->
+		</div>
+	<div class="banner">
+		<div class="container">
+			<div class="banner__small">
+				<div class="banner__text">SOMTHING IS BETTER</div>
+				<div class="banner__title">Fashion Lorrem </div>
+			</div>
+		</div><!-- .container -->
+	</div>
+
+	<div class="slider">
+	<div class="container">
+		<div class="slider__img"></div>
+			<div class="slider__img"></div>
+			<div class="slider__img"></div>
+
+			<div class="slider__info">Hot Collection</div>
+			<div class="slider__title">New Trend For Women</div>
+			<div class="slider__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis neque eu erat <br> aliquet posuere. Curabitur quis placerat nulla, <br> 
+nec vulputate arcu</div>
+		
+		<div class="slider__botton">
+			<a href="#" class="slider__btn">SHop Now</a>
+	
+		</div>
+			</div><!-- container -->
+		</div>
+
+		<div class="features">
+			<div class="container">
+
+			<div class="features__hot">Featured Items</div>
+			<div class="features__menu">
+				<div class="nav nav__features">
+					<ul class="menu__features">
+						<li class="menu__features-link"><a href="#">All</a></li>
+						<li class="menu__features-link"><a href="#">Men</a></li>
+						<li class="menu__features-link"><a href="#">Women</a></li>
+						<li class="menu__features-link"><a href="#">Kids</a></li>
+					</ul>
+				</div>
+			</div>
+
+				<div class="features__images">
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
+
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
+
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
+
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
+
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
+
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
+
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
+
+				<div class="features__image">
+						<div class="features__img"></div>
+					<div class="features__title">Suspendisse et.</div>
+					<div class="features__star"></div>
+					<div class="features__social">
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+						<a href="#"><i></i></a>
+					</div>
+				</div>
 				
 			</div><!-- .container -->
 		</div>
-		<div class="header__bottom">		
-		<div class="container">
-				
-		</div><!-- .container -->
-		</div>
+
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	</div><!-- .page-wrapper -->
 	
 </body>
